feat: user_services, user_controller, user_route

--- a/backend/.env
+++ b/backend/.env
@@ -17,4 +17,4 @@ CLOUDINARY_API_SECRET=PszMqxHaFEoBLW-nFDqfSEiivEc
 
 WHITE_LIST_ADMIN_EMAILS=peter0928091516@gmail.com,bobo99645@gamil.com
 
-ALLOW_ORIGIN=["http://localhost:3000"]
+ALLOW_ORIGINS=["http://localhost:3000"]
