fix: Railway MySQL connection URL

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ backend/flower-backend
 backend/tmp/
 backend/.env
 backend/.env.*
+backend/out
 
 # Frontend (if you have one)
 frontend/node_modules/
